# WCM

./: LICENSE  README.md
Hero-Image-Agent/: AGENT.md  INSTALL.md  MAKE_AUTOMATION_SETUP.md  PIPELINE_README.md  README.md  SKILL.md  TASTE_REFERENCE_TEMPLATE.md  WCM_STYLE_PROFILE.md  com.westcoastmodern.heroselect.plist  hero_select.py  pyproject.toml  requirements.txt  watch_folder.py  wcm_cli.py
Test 0.1 /: SKILL.md
Test 0.2/: SKILL.md  agent.md
Test 1 -G/: agent.md
docs/: index.html
